added about me page

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                         id="navbar_resume">Creations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_whos_sammy">Who's Sammy</a>
+                    <a class="nav-link"  href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_contact" data-toggle="modal" data-target="#contactModal">Contact</a>
+                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#" data-target="#contactModal">Connect</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_github_link" href="https://github.com/SammyRobensParadise"
@@ -127,6 +127,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h1 class="center landing-text display-2">Sammy Robens-Paradise</h1>
+            <h1 class="center landing-text-sub display-4">Systems Design Engineering</h1>
             <div class="landing-image">
             </div>
         </div>
@@ -169,7 +170,7 @@
                 </div>
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="https://sammy.world" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
+                        <a href="./me.html" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
                                 src="./src/assets/aboutsammy.png" alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text align-items-center">A little history about <b>me</b>...</p>
