--- a/me.html
+++ b/me.html
@@ -25,7 +25,8 @@
     </script>
 
     <!-- Intern al main Stylesheet-->
-    <link rel="stylesheet" type="text/css" media="screen" href="creations.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="me.css" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-social.css" />
 
@@ -126,127 +127,49 @@
     <!--THE FOLLOWING SECTION IS THE LANDING PAGE-->
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="center landing-text display-2">Some Art Some Design</h1>
-            <h1 class="center landing-text-sub display-4">More design on its way..</h1>
+            <h1 class="center landing-text display-2">Me - Sammy Robens-Paradise</h1>
             <div class="landing-image">
             </div>
         </div>
     </div>
-    </div>
-    <!--MAIN IMAGES SECTION-->
-    <div class="Images">
+    <div class="section-about">
         <div class="container">
-            <!--Row 1-->
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/assets/meta-card-portfolio@2x.png" alt="Card image cap">
+                        <img class="card-img-top" src="./src/assets/head_shot.png" alt="Card image cap">
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative1@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative2@2x.png" alt="Card image cap">
-                    </div>
+                <div class="col-sm-6">
+                    <p class="lead" style="color:#fff">As someone who advocates optimized engineering solutions, I
+                        continue on my journey to find the most eloquent and beautiful solutions to the worlds most
+                        challening problems. I have always taken an interest in the way humans interact with technology,
+                        and more specifically, the way it shapes our experiences.</p>
+                    <p class="lead"> I chose to study Systems Design Engineering because of my fascination with the way
+                        one user's experience of a product or service can shape their understanding of the world, and
+                        more specifically, the unique impact of that understanding.</p>
+                        <br>
+                        <div class="row">
+                                <div class="col-sm-3 text-center">
+                                    <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
+                                </div>
+                                <div class="col-sm-3 text-center">
+                                    <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
+                                </div>
+                                <div class="col-sm-3 text-center">
+                                    <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
+                                        class="fa fa-linkedin"></a>
+                                </div>
+                                <div class="col-sm-3 text-center">
+                                    <a href="https://github.com/SammyRobensParadise/" target="_blank"
+                                        class="fa fa-github"></a>
+                                </div>
                 </div>
             </div>
-            <!--Row 2-->
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative3@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative4@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative5@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-            </div>
-            <!--Row 3-->
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative6@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative7@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative8@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-            </div>
-            <!--Row 4-->
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative9@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative10@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative11@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-            </div>
-            <!--Row 5-->
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative12@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative13@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative14@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-            </div>
-            <!--Row 6-->
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative15@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative16@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/creative/creative17@2x.png" alt="Card image cap">
-                    </div>
-                </div>
-            </div>
-            <div style="text-align: right;"><a href="index.html">Back home...</a></div>
         </div>
     </div>
+
+
 
     <!--THIS IS THE FOOTER SECTION OPF THE WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
     <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
