--- a/creations.html
+++ b/creations.html
@@ -23,7 +23,7 @@
 
         gtag('config', 'UA-122502618-1');
     </script>
-
+    <link rel="shortcut icon" href="./favicon.ico" />
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="creations.css" />
 
@@ -83,7 +83,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#" data-target="#contactModal">Connect</a>
+                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#"
+                        data-target="#contactModal">Connect</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_github_link" href="https://github.com/SammyRobensParadise"
