--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         gtag('config', 'UA-122502618-1');
     </script>
-
+    <link rel="shortcut icon" href="./favicon.ico" />
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 
@@ -79,11 +79,12 @@
                         id="navbar_resume">Creations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"  href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
+                    <a class="nav-link" href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#" data-target="#contactModal">Connect</a>
+                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#"
+                        data-target="#contactModal">Connect</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_github_link" href="https://github.com/SammyRobensParadise"
@@ -160,8 +161,8 @@
             <div class="row">
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="./creations.html"><img class="card-img-top"
-                                src="./src/assets/Artworkcardcover.png" alt="Card image cap"></a>
+                        <a href="./creations.html"><img class="card-img-top" src="./src/assets/Artworkcardcover.png"
+                                alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text">Showcase of some little designs and custom vectors <b>created by
                                     me...</b></p>
