--- a/me.html
+++ b/me.html
@@ -23,7 +23,7 @@
 
         gtag('config', 'UA-122502618-1');
     </script>
-
+    <link rel="shortcut icon" href="./favicon.ico" />
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="me.css" />
@@ -84,7 +84,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#" data-target="#contactModal">Connect</a>
+                    <a class="nav-link" id="navbar_contact" data-toggle="modal" href="#"
+                        data-target="#contactModal">Connect</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_github_link" href="https://github.com/SammyRobensParadise"
@@ -148,32 +149,31 @@
                     <p class="lead"> I chose to study Systems Design Engineering because of my fascination with the way
                         one user's experience of a product or service can shape their understanding of the world, and
                         more specifically, the unique impact of that understanding.</p>
-                        <br>
-                        <div class="row">
-                                <div class="col-sm-3 text-center">
-                                    <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
-                                </div>
-                                <div class="col-sm-3 text-center">
-                                    <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
-                                </div>
-                                <div class="col-sm-3 text-center">
-                                    <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
-                                        class="fa fa-linkedin"></a>
-                                </div>
-                                <div class="col-sm-3 text-center">
-                                    <a href="https://github.com/SammyRobensParadise/" target="_blank"
-                                        class="fa fa-github"></a>
-                                </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-sm-3 text-center">
+                            <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
+                        </div>
+                        <div class="col-sm-3 text-center">
+                            <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
+                        </div>
+                        <div class="col-sm-3 text-center">
+                            <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
+                                class="fa fa-linkedin"></a>
+                        </div>
+                        <div class="col-sm-3 text-center">
+                            <a href="https://github.com/SammyRobensParadise/" target="_blank" class="fa fa-github"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
-    <!--THIS IS THE FOOTER SECTION OPF THE WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-    <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-    <div class="bottom-padding"></div>
+        <!--THIS IS THE FOOTER SECTION OPF THE WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
+        <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
+        <div class="bottom-padding"></div>
 </body>
 
 </html>
