fixed downloaded link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./creations.html" download="Sammy Robens-Paradise Resume"
+                    <a class="nav-link" href="./creations.html"
                         id="navbar_resume">Creations</a>
                 </li>
                 <li class="nav-item">
