fixed download link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="./me.html" download="Sammy Robens-Paradise Resume"><img class="card-img-top"
+                        <a href="./me.html"><img class="card-img-top"
                                 src="./src/assets/aboutsammy.png" alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text align-items-center">A little history about <b>me</b>...</p>
