--- a/404.html
+++ b/404.html
@@ -39,32 +39,17 @@
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body style="background-color:#000000;">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <img id="landing_page_img" src="20Artboard 1.png" class="center" width="100%" height="auto"
-                    alt="Landing Page Art">>
-            </div>
-        </div>
-    </div>
+<body style="background-color:#0d0d0d;">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text"
-                    href="https://sammyrobensparadise.github.io/SammyRobensParadise.github.io/index.html">
+                    href="./index.html">
                     Take me home...
                 </a>
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="container">
-            <p class="text-right lead" style="color:#ffff">Website created by Sammy Robens-Paradise</p>
-            <p class="text-right lead" style="color:#ffff">Email: srobensp@edu.uwaterloo.ca</p>
-            <p class="text-right lead" style="color:#ffff">Phone: 778-887-9189</p>
-        </div>
-        <div class="container">
             <div class="row">
                 <div class="col-sm-3 text-center">
                     <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
