updated 404 error page

--- a/404.html
+++ b/404.html
@@ -42,31 +42,35 @@
 <body style="background-color:#0d0d0d;">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text"
-                    href="./index.html">
+            <div class="col-sm-12" style="text-align: center;">
+                <br>
+                <div class="card" style="width: 100%;">
+                    <img class="card-img-top" src="./404error@2x.png" alt="Card image cap">
+                </div>
+                <a style="text-align: center;" id="takemehome" href="./index.html">
                     Take me home...
                 </a>
+                <br>
             </div>
         </div>
     </div>
-            <div class="row">
-                <div class="col-sm-3 text-center">
-                    <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
-                        class="fa fa-linkedin"></a>
-                </div>
-                <div class="col-sm-3 text-center">
-                    <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank"
-                        class="fa fa-github"></a>
-                </div>
-            </div>
-            <br>
+    <div class="row">
+        <br>
+        <div class="col-sm-3 text-center">
+            <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
+        </div>
+        <div class="col-sm-3 text-center">
+            <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
+        </div>
+        <div class="col-sm-3 text-center">
+            <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank" class="fa fa-linkedin"></a>
+        </div>
+        <div class="col-sm-3 text-center">
+            <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank"
+                class="fa fa-github"></a>
+        </div>
+    </div>
+    <br>
     </footer>
     <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
 </body>
