--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"
+                    <a class="nav-link" href="./src/assets/ResumeV5.pdf" download="Sammy Robens-Paradise Resume"
                         id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-sm-6 d-flex justify-content-center">
                     <div class="card" style="width: 100%;">
-                        <a href="./src/assets/Resumev4.pdf" download="Sammy Robens-Paradise Resume"><img
+                        <a href="./src/assets/ResumeV5.pdf" download="Sammy Robens-Paradise Resume"><img
                                 class="card-img-top" src="./src/assets/ResumeImage.png" alt="Card image cap"></a>
                         <div class="card-body">
                             <p class="card-text align-items-center">Get straight to it and check out my <b>Résumé</b>...
