fixed the whitespace issue on all pages

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     <!--THE FOLLOWING SECTION IS THE LANDING PAGE-->
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="center landing-text display-2">Sammy Robens-Paradise</h1>
-            <h1 class="center landing-text-sub display-4">Systems Design Engineering</h1>
+            <h1 class="justify-content-center landing-text display-2">Sammy Robens-Paradise</h1>
+            <h1 class="justify-content-center landing-text-sub display-4">Systems Design Engineering</h1>
             <div class="landing-image">
             </div>
         </div>
