--- a/creations.html
+++ b/creations.html
@@ -36,16 +36,16 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+        </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+        </script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
 </head>
@@ -242,6 +242,24 @@
                 <div class="col-sm-4">
                     <div class="card" style="width: 100%;">
                         <img class="card-img-top" src="./src/creative/creative17@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+            <!--Row 7-->
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative18@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative19@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative20@2x.png" alt="Card image cap">
                     </div>
                 </div>
             </div>
