--- a/creations.html
+++ b/creations.html
@@ -137,24 +137,42 @@
     <!--MAIN IMAGES SECTION-->
     <div class="Images">
         <div class="container">
-            <!--Row: May 4 2019-->
+            <!--Row: May 5 2019-->
             <div class="row">
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative21@2x.png" alt="Card image cap">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative22@2x.png" alt="Card image cap">
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card" style="width: 100%;">
-                            <img class="card-img-top" src="./src/creative/creative23@2x.png" alt="Card image cap">
-                        </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative24@2x.png" alt="Card image cap">
                     </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative25@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative26@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+            <!--Row: May 4 2019-->
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative21@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative22@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative23@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
             <!--Row 1-->
             <div class="row">
                 <div class="col-sm-4">
