--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_projects" href="https://sammy.world" target="_blank">Portfolio</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="navbar_dribbble" href="https://dribbble.com/sammyrp" target="_blank">Dribbble</a>
+                </li>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./src/assets/resumeV10.pdf" download="Sammy Robens-Paradise Resume"
