added additional row for may 13th design

--- a/creations.html
+++ b/creations.html
@@ -70,7 +70,8 @@
                     <a class="nav-link" id="navbar_projects" href="https://sammy.world" target="_blank">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_dribbble" href="https://dribbble.com/sammyrp" target="_blank">Dribbble</a>
+                    <a class="nav-link" id="navbar_dribbble" href="https://dribbble.com/sammyrp"
+                        target="_blank">Dribbble</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./src/assets/resumeV11.pdf" download="Sammy Robens-Paradise Resume"
@@ -139,6 +140,24 @@
     <!--MAIN IMAGES SECTION-->
     <div class="Images">
         <div class="container">
+            <!--Row: May 13 2019-->
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative27@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative29@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card" style="width: 100%;">
+                        <img class="card-img-top" src="./src/creative/creative30@2x.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
             <!--Row: May 5 2019-->
             <div class="row">
                 <div class="col-sm-4">
