continued editing and updating index.html, added sections for portfolio and eb's website as well as updated the next section for the school projects,however this is not done yet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--index.HTML DOCUMENT ___________________________-->
 <!--CREATED INDEPENDANTLY BY: SAMMY ROBENS-PARADISE-->
-<!--CURRENT AS OF: 2018-06-29______________________-->
 
 <!DOCTYPE html>
 <html>
@@ -46,7 +45,7 @@
 
 <body>
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default ">
+    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default fixed-top navigation-tag">
         <a class="navbar-brand active" href="index.html">
             Home
         </a>
@@ -119,6 +118,7 @@
     <!--END OF MODAL SECTION-->
 
     <!--THE FOLLOWING SECTION IS THE LANDING PAGE-->
+    <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
             <h1 class="justify-content-center landing-text anim-typewriter display-3">A creative west coast kid.</h1>
@@ -144,13 +144,17 @@
             </div>
             </div>
             </div>
-            <div class="local-content">
+            <div class="local-content" id="local-content-contain">
                 <div class="localbackground-img">
-
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h1 class="projects-header">Projects</h1>
+                        </div>
+                    </div>
                         <div class=row>
                             <div class="col-sm-12 projects-section-bc-ferries">
-                                <div class="bc-ferries-section" onmouseover="handlemouseover()">
-                                    <h2 class="section-p">BC Ferries Case Study 2019</h2>
+                                <div class="bc-ferries-section">
+                                    <h2 class="section-p">BC Ferries Case Study - Fall 2019</h2>
                                     <p class="section-p">A case study and redesign of the BC Ferries digital experience from user interviews to cloud functions!</p>
                                 </div>
                             </div>
@@ -163,6 +167,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class=row>
+                                    <div class="col-sm-12 projects-section-eb-web">
+                                        <div class="eb-web-fall-2018">
+                                            <h2 class="section-p">EB Web Design - Fall 2018</h2>
+                                            <p class="section-p">A react.js web app designed for an actress based out of vancouver featuring her fall 2018 reel and bio!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class=row>
+                                        <div class="col-sm-12 projects-section-school-rel">
+                                            <div class="school-rel-2017-2019">
+                                                <h2 class="section-p">School Projects - First Year</h2>
+                                                <p class="section-p">A collection of my first year projects from Systems Design Engieering, at UWaterloo!</p>
+                                            </div>
+                                        </div>
+                                    </div>
                         <div class=row>
                                 <div class="col-sm-12 work-section-1">
     
