--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
     <!-- Internal JavaScript main.js file-->
-    <script src="./index.js"></script>
-    <script src="./node_modules/animejs/lib/anime.min.js"></script>
-    <script src="./node_modules/animejs/lib/anime.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -132,7 +130,7 @@
                     <div class="col-sm-6">
                         <div class="landing-page-content">
                             <p class="find-out-what-working-on">Find out what I've been working on!</p>
-                            <button class="button-des" id="projects-button">Projects</button>
+                            <button class="button-des" id="projects-button" onclick="scrollToEl('projects',null)">Projects</button>
                             <button class="button-des" id="portfolio-button"><a id="href-a-to-sammy" href="https://sammy.world"
                                     target="_blank">Portfolio</a></button>
                             <button class="button-des" id="work-button">Work</button>
@@ -148,7 +146,7 @@
                 <div class="localbackground-img">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h1 class="projects-header display-4">Projects</h1>
+                            <h1 class="projects-header display-4" id="projects">Projects</h1>
                         </div>
                     </div>
                     <div class=row>
@@ -193,6 +191,14 @@
                         </div>
                     </div>
                     <div class=row>
+                            <div class="col-sm-12 work-section-hootsuite">
+                                <div class="hootsuite-section">
+                                    <h2 class="section-p">Hootsuite - Fall 2019</h2>
+                                    <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team, beginning September 2019!</p>
+                                </div>
+                            </div>
+                        </div>
+                    <div class=row>
                         <div class="col-sm-12 work-section-ffatg">
                             <div class="ffatg-section">
                                 <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
@@ -200,6 +206,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class=row>
+                            <div class="col-sm-12 work-section-eccc">
+                                <div class="eccc-section">
+                                    <h2 class="section-p">Environment and Climate Change Canada -  Winter 2018</h2>
+                                    <p class="section-p">Get a sneak peek into the thought and software infrastructure behind Canada's Climate battle!</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     </div>
                     <div class="section-link-out">
