added  functions to the index.js file

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <button class="button-des" id="projects-button" onclick="scrollToEl('projects',null)">Projects</button>
                             <button class="button-des" id="portfolio-button"><a id="href-a-to-sammy" href="https://sammy.world"
                                     target="_blank">Portfolio</a></button>
-                            <button class="button-des" id="work-button">Work</button>
+                            <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
                             <button class="button-des" id="cv-button"><a id="href-a-to-resume-dwld"
                                     href="./src/assets/resumeV16.pdf" target="_blank">Resume/CV</a></button>
                         </div>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <h1 class="work-header display-4">Work</h1>
+                            <h1 class="work-header display-4" id="work">Work</h1>
                         </div>
                     </div>
                     <div class=row>
