--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -123,7 +123,7 @@
         <div class="col-sm-12">
             <h1 class="display-3">BC Ferries Redesign 2019</h1>
             <h1 class="display-4">A case study looking at improving the digital experience of BC ferries</h1>
-            <div class="landing-image">
+            <div class="landing-image-bc-ferries">
                 <div class="row">
                     <div class="col-sm-6">
                     </div>
